# GitHubCLI

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: app.rs  auth.rs  github.rs  main.rs
src/ui/: mod.rs
