[package]
name = "GitHubCLI"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
directories = "6.0.0"
dotenvy = "0.15.7"
open = "5.3.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["default", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tui-input = "0.15.1"
